--- a/app/views/blobs/show.html.erb
+++ b/app/views/blobs/show.html.erb
@@ -1,10 +1,49 @@
 <p style="color: green"><%= notice %></p>
-
 <%= render @blob %>
-
+<% if @blob.compression.present? %>
+  <p><b>Compressed size:</b>
+    <%= number_to_human_size @blob.contents.size %>
+  </p>
+<% end %>
+<% if @blob.size < 2.kilobytes %>
+  <h2>Contents</h2>
+  <pre><%= @blob.decompressed_contents %></pre>
+<% else %>
+  <h2>Contents</h2>
+  <p><%= link_to "Download", raw_blob_path(@blob.sha256) %></p>
+<% end %>
+<% if @blob.package_version %>
+  <h2>Package version</h2>
+  <p><%= link_to @blob.package_version.full_name, @blob.package_version %></p>
+<% end %>
+<% if @blob.quick_spec_version %>
+  <h2>Quick Spec version</h2>
+  <p><%= link_to @blob.quick_spec_version.full_name, @blob.quick_spec_version %></p>
+<% end %>
+<% if @blob.package_spec_version %>
+  <h2>Package Spec version</h2>
+  <p><%= link_to @blob.package_spec_version.full_name, @blob.package_spec_version %></p>
+<% end %>
+<h2>Version data entries</h2>
+<table>
+  <thead>
+    <tr>
+      <th>Version</th>
+      <th>Path</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @version_data_entries.each do |entry| %>
+      <tr>
+        <td><%= link_to entry.version.full_name, entry.version %></td>
+        <td><%= link_to entry.full_name, rubygem_file_history_path(entry.version.rubygem.name, path: entry.full_name) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<%== pagy_nav(@version_data_entries_pagy) if @version_data_entries_pagy.pages > 1 %>
 <div>
   <%= link_to "Edit this blob", edit_blob_path(@blob) %> |
   <%= link_to "Back to blobs", blobs_path %>
-
   <%= button_to "Destroy this blob", @blob, method: :delete %>
 </div>
