--- a/app/views/rubygems/index.html.erb
+++ b/app/views/rubygems/index.html.erb
@@ -1,14 +1,11 @@
 <p style="color: green"><%= notice %></p>
-
 <h1>Rubygems</h1>
-
 <div id="rubygems">
   <% @rubygems.each do |rubygem| %>
     <%= render rubygem %>
     <p>
-      <%= link_to "Show this rubygem", rubygem %>
+      <%= link_to "Show this rubygem", rubygem.name %> |
     </p>
   <% end %>
 </div>
-
-<%= link_to "New rubygem", new_rubygem_path %>
+<%== pagy_nav(@pagy) if @pagy.pages > 1 %>
