--- a/app/views/rubygems/show.html.erb
+++ b/app/views/rubygems/show.html.erb
@@ -1,10 +1,9 @@
 <p style="color: green"><%= notice %></p>
-
 <%= render @rubygem %>
-
+<%= render @versions %>
+<%== pagy_nav(@pagy) if @pagy.pages > 1 %>
 <div>
   <%= link_to "Edit this rubygem", edit_rubygem_path(@rubygem) %> |
   <%= link_to "Back to rubygems", rubygems_path %>
-
   <%= button_to "Destroy this rubygem", @rubygem, method: :delete %>
 </div>
