--- a/app/views/blobs/edit.html.erb
+++ b/app/views/blobs/edit.html.erb
@@ -1,10 +1,7 @@
 <h1>Editing blob</h1>
-
 <%= render "form", blob: @blob %>
-
 <br>
-
 <div>
-  <%= link_to "Show this blob", @blob %> |
+  <%= link_to "Show this blob", blob_path(@blob.sha256) %> |
   <%= link_to "Back to blobs", blobs_path %>
 </div>
