--- a/app/views/rubygems/edit.html.erb
+++ b/app/views/rubygems/edit.html.erb
@@ -1,10 +1,7 @@
 <h1>Editing rubygem</h1>
-
 <%= render "form", rubygem: @rubygem %>
-
 <br>
-
 <div>
-  <%= link_to "Show this rubygem", @rubygem %> |
+  <%= link_to "Show this rubygem", [@rubygem.server, :rubygem, @rubygem.name] %> |
   <%= link_to "Back to rubygems", rubygems_path %>
 </div>
