--- a/app/views/rubygems/_rubygem.html.erb
+++ b/app/views/rubygems/_rubygem.html.erb
@@ -4,6 +4,7 @@
     <%= link_to_unless_current rubygem.name, rubygem_path(rubygem.name) %>
     <br>
     <strong>Versions:</strong> <%= rubygem.versions.count.to_fs(:delimited) %>
+    (<%= rubygem.versions.yanked.count.to_fs(:delimited) %> yanked)
     <br>
     <strong>Total size:</strong> <%= number_to_human_size rubygem.package_blobs.sum(:size) %>
     <br>
